--- a/app/assets/stylesheets/mixer/_MixerControlls.scss
+++ b/app/assets/stylesheets/mixer/_MixerControlls.scss
@@ -2,10 +2,9 @@
   position: relative;
   width: $basicWidth;
   height: 100vh;
-  @include border;
 
   .mixerControllsKnobs {
     display: flex;
-    @include border;
+    position: relative;
   }
 }
