--- a/app/assets/stylesheets/synth/_Sequensor.scss
+++ b/app/assets/stylesheets/synth/_Sequensor.scss
@@ -3,8 +3,7 @@
   position: relative;
   width: calc(#{$basicWidth} * 6);
   height: calc(#{$basicUnit} * 3);
-  @include border;
-  margin-top: -6px;
+  // margin-top: -6px;
 
   .octaveSwitcher {
     height: 100%;
@@ -58,52 +57,69 @@
       }
     }
 
-    &:nth-of-type(odd) {
+    &:nth-of-type(1) {
       background-color: $grey;
     }
 
-    &:nth-of-type(even) {
+    &:nth-of-type(2) {
+      background-color: $grey;
+    }
+
+    &:nth-of-type(3) {
+      background-color: $grey;
+    }
+
+    &:nth-of-type(4) {
+      background-color: $grey;
+    }
+
+    &:nth-of-type(5) {
+      background-color: $darkGrey;
+    }
+
+    &:nth-of-type(6) {
+      background-color: $darkGrey;
+    }
+
+    &:nth-of-type(7) {
+      background-color: $darkGrey;
+    }
+
+    &:nth-of-type(8) {
+      background-color: $darkGrey;
+    }
+
+    &:nth-of-type(9) {
+      background-color: $grey;
+    }
+
+    &:nth-of-type(10) {
+      background-color: $grey;
+    }
+
+    &:nth-of-type(11) {
+      background-color: $grey;
+    }
+
+    &:nth-of-type(12) {
+      background-color: $grey;
+    }
+
+    &:nth-of-type(13) {
+      background-color: $darkGrey;
+    }
+
+    &:nth-of-type(14) {
+      background-color: $darkGrey;
+    }
+
+    &:nth-of-type(15) {
+      background-color: $darkGrey;
+    }
+
+    &:nth-of-type(16) {
       background-color: $darkGrey;
     }
   }
 
-  .left {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 6px;
-    background-color: black;
-    z-index: 10;
-  }
-
-  .right {
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    width: 6px;
-    background-color: black;
-    z-index: 10;
-  }
-
-  .bottom {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 6px;
-    width: 100%;
-    background-color: black;
-    z-index: 10;
-  }
-
-  .top {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 6px;
-    width: 100%;
-    background-color: black;
-    z-index: 10;
-  }
 }
